# mantigraphia

./: .gitignore  .gitmodules  COPYING  Makefile.am  configure.ac  design.txt
share/glsl/: Makefile.am  fbrush.glsl  fcanvas.glsl  fflower.glsl  fmanifold.glsl  fpaint_overlay.glsl  fpencil.glsl  fpointcircle.glsl  fpostprocess.glsl  fskybox.glsl  fsolid.glsl  fsplotch.glsl  fsplotch_poly.glsl  fterrabuff.glsl  fvoxel.glsl  perspective.glsl  vbrush.glsl  vcanvas.glsl  vflower.glsl  vgenericc.glsl  vgenericctc.glsl  vgenerictc.glsl  vmanifold.glsl  vpaint_overlay.glsl  vpencil.glsl  vskybox.glsl  vsplotch.glsl  vsplotch_poly.glsl  vterrabuff.glsl  vvoxel.glsl
share/llua/: cherry-tree.lua  common-flowers.lua  core.lua  oak-tree.lua  test-resources.lua
src/: Makefile.am  alloc.h  bsd.h  coords.c  coords.h  cosine-world.c  cosine-world.h  defs.h  dynamic-code.c  dynamic-code.h  file-preamble  flower-pot.c  flower-pot.h  frac.h  game-state.h  gen_trigtab.c  main.c  micromp.c  micromp.h  rand.c  rand.h  simd.h
src/contrib/lua/: README.md  lapi.c  lauxlib.c  lauxlib.h  linit.c  llimits.h  lobject.c  lparser.c  lstate.c  lstate.h  lua.c  lua.h  luaconf.h  lualib.h  lundump.c  lvm.c
src/control/: mouselook.c  mouselook.h
src/gl/: auxbuff.c  auxbuff.h  glinfo.c  glinfo.h  marshal.c  marshal.h  shader_loader.c  shader_loader.h  shaders.c  shaders.h  shaders.inc
src/graphics/: abstract.h  brush.c  brush.h  canvas.c  canvas.h  dm-proj.c  dm-proj.h  fast-brush.c  fast-brush.h  glbrush.c  glbrush.h  glpencil.c  glpencil.h  hull.c  hull.h  linear-paint-tile.c  linear-paint-tile.h  paint-overlay.c  paint-overlay.h  parchment.c  parchment.h  pencil.c  pencil.h  perspective.c  perspective.h  sybmap.c  sybmap.h  tiled-texture.c  tiled-texture.h  tscan.c  tscan.h  turtle.c  turtle.h
src/llua-bindings/: gen-bindings.lua  lluas.c  lluas.h  mg-module.lua  rfb-module.lua
src/math/: coords.c  coords.h  evaluator.c  evaluator.h  frac.h  gen_trigtab.c  matrix.c  matrix.h  poisson-disc.c  poisson-disc.h  rand.c  rand.h  simd.h  sse.h  trigtab.c
src/render/: basic-world.c  basic-world.h  colour-palettes.c  colour-palettes.h  context.c  context.h  draw-queue.c  draw-queue.h  env-vmap-manifold-renderer.c  env-vmap-manifold-renderer.h  env-vmap-render-common.h  env-vmap-renderer.c  env-vmap-renderer.h  env-vmap-voxel-renderer.c  env-vmap-voxel-renderer.h  env-voxel-graphic.h  flower-map-renderer.c  flower-map-renderer.h  fog.c  fog.h  grass-props.c  grass-props.h  lsystem.c  lsystem.h  paint-overlay.c  paint-overlay.h  propped-world.c  propped-world.h  props.c  props.h  shared-fast-brush.c  shared-fast-brush.h  skybox.c  skybox.h  terrabuff.c  terrabuff.h  terrain-tilemap-rnd.c  terrain-tilemap.c  terrain-tilemap.h  terrain.c  (+9 more)
src/resource/: resource-file-builder.c  resource-file-builder.h  resource-loader.c  resource-loader.h  texgen.c  texgen.h
src/resource/asn1/: Makefile.am  resource-file.asn1
src/top/: cosine-world.c  cosine-world.h  main.c
src/world/: basic-world.c  basic-world.h  env-vmap.c  env-vmap.h  flower-map.c  flower-map.h  generate.c  generate.h  grass-props.h  hspace.c  hspace.h  nfa-turtle-vmap-painter.c  nfa-turtle-vmap-painter.h  propped-world.c  propped-world.h  props.c  props.h  terrain-tilemap.c  terrain-tilemap.h  terrain.c  terrain.h  vmap-painter.c  vmap-painter.h  world-object-distributor.c  world-object-distributor.h  world.c  world.h
test/: Makefile.am  test.h
test/math/: evaluator.c
test/world/: env-vmap.c
